// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toColumnMap/fromColumnMap should properly deal with missing values 1`] = `
Object {
  "children": Object {
    "x": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        2,
      ],
    },
    "y": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        2,
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should properly deal with nested objects 1`] = `
Object {
  "children": Object {
    "data": Object {
      "children": Object {
        "reason": Object {
          "indices": Array [
            1,
          ],
          "values": Array [
            "because",
          ],
        },
        "timestamp": Object {
          "indices": Array [
            0,
          ],
          "values": Array [
            1,
          ],
        },
      },
    },
    "type": Object {
      "indices": Array [
        0,
        1,
      ],
      "values": Array [
        "start",
        "stop",
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should properly deal with weird javascript crap 1`] = `
Object {
  "children": Object {
    "0": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        1,
      ],
    },
    "1": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        0,
      ],
    },
    "a": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        1,
      ],
    },
    "b": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        NaN,
      ],
    },
    "c": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        Infinity,
      ],
    },
    "d": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        -Infinity,
      ],
    },
    "false": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        0,
      ],
    },
    "null": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        1,
      ],
    },
    "true": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        1,
      ],
    },
    "undefined": Object {
      "indices": Array [
        1,
      ],
      "values": Array [
        false,
      ],
    },
    "w": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        false,
      ],
    },
    "x": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        undefined,
      ],
    },
    "y": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        null,
      ],
    },
    "z": Object {
      "indices": Array [
        0,
      ],
      "values": Array [
        true,
      ],
    },
  },
}
`;

exports[`toColumnMap/fromColumnMap should work for normal time series data 1`] = `
Object {
  "children": Object {
    "x": Object {
      "indices": Array [
        0,
        1,
      ],
      "values": Array [
        1,
        2,
      ],
    },
    "y": Object {
      "indices": Array [
        0,
        1,
      ],
      "values": Array [
        2,
        1,
      ],
    },
  },
}
`;
